Remove nanoTime postfix for dummy file. Minimize creation for dummy file. Improve classes output and project directories detection
Fixed #2180