@@ -1,14 +1,10 @@
 package io.micronaut.openapi.generator.assertions;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-
+import com.github.javaparser.JavaParser;
+import com.github.javaparser.ParseResult;
+import com.github.javaparser.ParserConfiguration;
+import com.github.javaparser.ast.CompilationUnit;
+import com.google.common.collect.ImmutableMap;
 import io.swagger.parser.OpenAPIParser;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
@@ -17,18 +13,20 @@ import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.parser.core.models.ParseOptions;
-
 import org.openapitools.codegen.CodegenModel;
 import org.openapitools.codegen.InlineModelResolver;
 import org.openapitools.codegen.model.ModelMap;
 import org.openapitools.codegen.model.ModelsMap;
 import org.openapitools.codegen.utils.ModelUtils;
 
-import com.github.javaparser.JavaParser;
-import com.github.javaparser.ParseResult;
-import com.github.javaparser.ParserConfiguration;
-import com.github.javaparser.ast.CompilationUnit;
-import com.google.common.collect.ImmutableMap;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -89,7 +87,7 @@ public class TestUtils {
     }
 
     public static void validateJavaSourceFiles(Map<String, String> fileMap) {
-        fileMap.forEach( (fileName, fileContents) -> {
+        fileMap.forEach((fileName, fileContents) -> {
                 if (fileName.endsWith(".java")) {
                     assertValidJavaSourceCode(fileContents, fileName);
                 }
@@ -98,18 +96,18 @@ public class TestUtils {
     }
 
     public static void validateJavaSourceFiles(List<File> files) {
-        files.forEach( f -> {
-                    String fileName = f.getName();
-                    if (fileName.endsWith(".java")) {
-                        String fileContents = "";
-                        try {
-                            fileContents = Files.readString(f.toPath());
-                        } catch (IOException ignored) {
+        files.forEach(f -> {
+                String fileName = f.getName();
+                if (fileName.endsWith(".java")) {
+                    String fileContents = "";
+                    try {
+                        fileContents = Files.readString(f.toPath());
+                    } catch (IOException ignored) {
 
-                        }
-                        assertValidJavaSourceCode(fileContents, fileName);
                     }
+                    assertValidJavaSourceCode(fileContents, fileName);
                 }
+            }
         );
     }
 
@@ -174,102 +172,102 @@ public class TestUtils {
 
     public static void assertExtraAnnotationFiles(String baseOutputPath) {
 
-        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/EmployeeEntity.java"))
-                .assertTypeAnnotations()
-                    .containsWithName("javax.persistence.Entity")
-                    .containsWithNameAndAttributes("javax.persistence.Table", ImmutableMap.of("name", "\"employees\""))
-                .toType()
-                .hasProperty("assignments")
-                    .assertPropertyAnnotations()
-                    .containsWithNameAndAttributes("javax.persistence.OneToMany", ImmutableMap.of("mappedBy", "\"employee\""))
-                    .toProperty()
-                .toType();
+        JavaFileAssert.assertThat(Path.of(baseOutputPath + "/EmployeeEntity.java"))
+            .assertTypeAnnotations()
+            .containsWithName("javax.persistence.Entity")
+            .containsWithNameAndAttributes("javax.persistence.Table", ImmutableMap.of("name", "\"employees\""))
+            .toType()
+            .hasProperty("assignments")
+            .assertPropertyAnnotations()
+            .containsWithNameAndAttributes("javax.persistence.OneToMany", ImmutableMap.of("mappedBy", "\"employee\""))
+            .toProperty()
+            .toType();
 
-        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/Employee.java"))
-                .assertTypeAnnotations()
-                    .containsWithName("javax.persistence.MappedSuperclass")
-                .toType()
-                .hasProperty("id")
-                    .assertPropertyAnnotations()
-                    .containsWithName("javax.persistence.Id")
-                    .toProperty()
-                .toType()
-                .hasProperty("email")
-                    .assertPropertyAnnotations()
-                    .containsWithName("org.hibernate.annotations.Formula")
-                    .toProperty()
-                .toType()
-                .hasProperty("hasAcceptedTerms")
-                    .assertPropertyAnnotations()
-                    .containsWithName("javax.persistence.Transient")
-                    .toProperty()
-                .toType();
+        JavaFileAssert.assertThat(Path.of(baseOutputPath + "/Employee.java"))
+            .assertTypeAnnotations()
+            .containsWithName("javax.persistence.MappedSuperclass")
+            .toType()
+            .hasProperty("id")
+            .assertPropertyAnnotations()
+            .containsWithName("javax.persistence.Id")
+            .toProperty()
+            .toType()
+            .hasProperty("email")
+            .assertPropertyAnnotations()
+            .containsWithName("org.hibernate.annotations.Formula")
+            .toProperty()
+            .toType()
+            .hasProperty("hasAcceptedTerms")
+            .assertPropertyAnnotations()
+            .containsWithName("javax.persistence.Transient")
+            .toProperty()
+            .toType();
 
-        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/SurveyGroupEntity.java"))
-                .assertTypeAnnotations()
-                    .containsWithName("javax.persistence.Entity")
-                    .containsWithNameAndAttributes("javax.persistence.Table", ImmutableMap.of("name", "\"survey_groups\""))
-                .toType()
-                .hasProperty("assignments")
-                    .assertPropertyAnnotations()
-                    .containsWithName("javax.persistence.OneToMany")
-                    .containsWithNameAndAttributes("javax.persistence.JoinColumn", ImmutableMap.of("name", "\"survey_group_id\""))
-                    .toProperty()
-                .toType()
-                .hasProperty("disabled")
-                    .assertPropertyAnnotations()
-                    .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("nullable", "false"))
-                    .toProperty()
-                .toType();
+        JavaFileAssert.assertThat(Path.of(baseOutputPath + "/SurveyGroupEntity.java"))
+            .assertTypeAnnotations()
+            .containsWithName("javax.persistence.Entity")
+            .containsWithNameAndAttributes("javax.persistence.Table", ImmutableMap.of("name", "\"survey_groups\""))
+            .toType()
+            .hasProperty("assignments")
+            .assertPropertyAnnotations()
+            .containsWithName("javax.persistence.OneToMany")
+            .containsWithNameAndAttributes("javax.persistence.JoinColumn", ImmutableMap.of("name", "\"survey_group_id\""))
+            .toProperty()
+            .toType()
+            .hasProperty("disabled")
+            .assertPropertyAnnotations()
+            .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("nullable", "false"))
+            .toProperty()
+            .toType();
 
-        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/SurveyGroup.java"))
-                .assertTypeAnnotations()
-                    .containsWithName("javax.persistence.MappedSuperclass")
-                    .containsWithName("javax.persistence.EntityListeners")
-                .toType()
-                .hasProperty("id")
-                    .assertPropertyAnnotations()
-                    .containsWithName("javax.persistence.Id")
-                    .containsWithNameAndAttributes("javax.persistence.GeneratedValue", ImmutableMap.of("generator", "\"UUID\""))
-                    .containsWithNameAndAttributes("org.hibernate.annotations.GenericGenerator", ImmutableMap.of("name", "\"UUID\"","strategy", "\"org.hibernate.id.UUIDGenerator\""))
-                    .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("name", "\"id\"","updatable", "false","nullable", "false"))
-                    .toProperty()
-                .toType()
-                .hasProperty("createdDate")
-                    .assertPropertyAnnotations()
-                    .containsWithName("org.springframework.data.annotation.CreatedDate")
-                    .toProperty()
-                .toType()
-                .hasProperty("createdBy")
-                    .assertPropertyAnnotations()
-                    .containsWithName("org.springframework.data.annotation.CreatedBy")
-                    .toProperty()
-                .toType()
-                .hasProperty("modifiedDate")
-                    .assertPropertyAnnotations()
-                    .containsWithName("org.springframework.data.annotation.LastModifiedDate")
-                    .toProperty()
-                .toType()
-                .hasProperty("modifiedBy")
-                    .assertPropertyAnnotations()
-                    .containsWithName("org.springframework.data.annotation.LastModifiedBy")
-                    .toProperty()
-                .toType()
-                .hasProperty("opportunityId")
-                    .assertPropertyAnnotations()
-                    .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("unique", "true"))
-                    .toProperty()
-                .toType()
-                .hasProperty("submissionStatus")
-                    .assertPropertyAnnotations()
-                    .containsWithName("javax.persistence.Transient")
-                    .toProperty()
-                .toType();
+        JavaFileAssert.assertThat(Path.of(baseOutputPath + "/SurveyGroup.java"))
+            .assertTypeAnnotations()
+            .containsWithName("javax.persistence.MappedSuperclass")
+            .containsWithName("javax.persistence.EntityListeners")
+            .toType()
+            .hasProperty("id")
+            .assertPropertyAnnotations()
+            .containsWithName("javax.persistence.Id")
+            .containsWithNameAndAttributes("javax.persistence.GeneratedValue", ImmutableMap.of("generator", "\"UUID\""))
+            .containsWithNameAndAttributes("org.hibernate.annotations.GenericGenerator", ImmutableMap.of("name", "\"UUID\"", "strategy", "\"org.hibernate.id.UUIDGenerator\""))
+            .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("name", "\"id\"", "updatable", "false", "nullable", "false"))
+            .toProperty()
+            .toType()
+            .hasProperty("createdDate")
+            .assertPropertyAnnotations()
+            .containsWithName("org.springframework.data.annotation.CreatedDate")
+            .toProperty()
+            .toType()
+            .hasProperty("createdBy")
+            .assertPropertyAnnotations()
+            .containsWithName("org.springframework.data.annotation.CreatedBy")
+            .toProperty()
+            .toType()
+            .hasProperty("modifiedDate")
+            .assertPropertyAnnotations()
+            .containsWithName("org.springframework.data.annotation.LastModifiedDate")
+            .toProperty()
+            .toType()
+            .hasProperty("modifiedBy")
+            .assertPropertyAnnotations()
+            .containsWithName("org.springframework.data.annotation.LastModifiedBy")
+            .toProperty()
+            .toType()
+            .hasProperty("opportunityId")
+            .assertPropertyAnnotations()
+            .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("unique", "true"))
+            .toProperty()
+            .toType()
+            .hasProperty("submissionStatus")
+            .assertPropertyAnnotations()
+            .containsWithName("javax.persistence.Transient")
+            .toProperty()
+            .toType();
 
-        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/CompanyDto.java"))
+        JavaFileAssert.assertThat(Path.of(baseOutputPath + "/CompanyDto.java"))
             .hasProperty("priceCategory")
-                .assertPropertyAnnotations()
-                .containsWithNameAndAttributes("IgnoreForRoles", ImmutableMap.of("value", "\"MEDIA_ADMIN\""));
+            .assertPropertyAnnotations()
+            .containsWithNameAndAttributes("IgnoreForRoles", ImmutableMap.of("value", "\"MEDIA_ADMIN\""));
     }
 
     public static ModelsMap createCodegenModelWrapper(CodegenModel cm) {
